--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -9,8 +9,8 @@ colorScheme = "blowfish"
 defaultAppearance = "light" # valid options: light or dark
 autoSwitchAppearance = true
 
-enableSearch = true
-enableCodeCopy = true
+enableSearch = false
+enableCodeCopy = false
 
 # mainSections = ["section1", "section2"]
 # robots = ""
