Hide copyright (pt. 2)
Signed-off-by: Christian Berendt <berendt@osism.tech>

--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -29,8 +29,8 @@ smartTOCHideUnfocusedChildren = true
 
 [footer]
   showMenu = true
-  showCopyright = true
-  showThemeAttribution = true
+  showCopyright = false
+  showThemeAttribution = false
   showAppearanceSwitcher = true
   showScrollToTop = false
 
